...
              '$_counter',
              style: Theme.of(context).textTheme.headline4,
            ),
            ElevatedButton(
              onPressed: goToSecondPage,
              child: const Text("New Page"),
              key: const ValueKey('login.enterButton'),
            ),
            Text(
              _textResult != '' ? 'Info is: \n$_textResult' : '',
              style: Theme.of(context).textTheme.headline4,
            ),
          ],
...
